@@ -291,6 +291,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #5994: the marshal module now has docstrings.
+
 - Issue #5977: distutils build_ext.get_outputs was not taking into account the
   inplace option. Initial patch by kxroberto.
 
